fix: use Collections.singletonList for Java 8 compatibility in backport